--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Clientside Portfolio</h1>
         <h2>Jackson Lawerence</h2>
         <nav>
-            <a href="url">Chapter 1</a>
+            <a href="https://jacksonl11.github.io/ClientSide23/url">Chapter 1</a>
         </nav>
 
     </body>
