--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- You can place style and scripts here-->
     <body>
         <h1>Clientside Portfolio</h1>
-        <h2>Jackson Lawerence</h2>
+        <h2>Jackson Lawrence</h2>
         <nav>
             <a href="https://jacksonl11.github.io/ClientSide23/url">Chapter 1</a>
         </nav>
