--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Clientside Portfolio</h1>
         <h2>Jackson Lawrence</h2>
         <nav>
-            <a href="https://github.com/JacksonL11/ClientSide23.git</a>
+            <a href="https://github.com/JacksonL11/Chapter1</a>
         </nav>
 
     </body>
