--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Clientside Portfolio</h1>
         <h2>Jackson Lawrence</h2>
         <nav>
-            <a href="https://jacksonl11.github.io/CleintSide23/Chapter1/</a>
+            <a href="https://jacksonl11.github.io/CleintSide23/Chapter1/url>Chapter 1</a>
         </nav>
 
     </body>
