--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang = "en">
     <head>
-        <title>Chapter 1</title>
+        <title>ClientSide Portfolio</title>
         <meta charset="utf-8">
 
     </head>
@@ -10,7 +10,7 @@
         <h1>Clientside Portfolio</h1>
         <h2>Jackson Lawrence</h2>
         <nav>
-            <a href="https://jacksonl11.github.io/CleintSide23/Chapter1/url>Chapter 1</a>
+            <a href="https://jacksonl11.github.io/Chapter1/url>chapter1</a>
         </nav>
 
     </body>
