--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <meta charset="utf-8" />
-   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-   <title>Jackson's Motor Mall</title>
-   <link rel="stylesheet" href="styles.css" />
+  <title>Jackson's Motor Mall</title>
 </head>
-<h1> Jackson's Motor Mall</h1>
-<div class="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="image1.jpg" alt="Image 1">
-        <div class="carousel-caption">
-          <h3>Image 1</h3>
-          <p>Description of image 1</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="image2.jpg" alt="Image 2">
-        <div class="carousel-caption">
-          <h3>Image 2</h3>
-          <p>Description of image 2</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="image3.jpg" alt="Image 3">
-        <div class="carousel-caption">
-          <h3>Image 3</h3>
-          <p>Description of image 3</p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-  
+<body>
+  <header>
+    <h1>Jackson's Motor Mall</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="#about">About Cars</a></li>
+      <li><a href="#types">Types of Cars</a></li>
+      <li><a href="#brands">Popular Car Brands</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="about">
+      <h2>About Cars</h2>
+      <p>Cars are vehicles that are used for transportation on roads. They are powered by internal combustion engines or electric motors and are available in a wide range of models, styles, and price points.</p>
+    </section>
+
+    <section id="types">
+      <h2>Types of Cars</h2>
+      <ul>
+        <li>Sedans</li>
+        <li>SUVs</li>
+        <li>Trucks</li>
+        <li>Sports Cars</li>
+        <li>Hybrids</li>
+        <li>Electric Cars</li>
+      </ul>
+    </section>
+
+    <section id="brands">
+      <h2>Popular Car Brands</h2>
+      <ul>
+        <li>Toyota</li>
+        <li>Ford</li>
+        <li>Chevrolet</li>
+        <li>Honda</li>
+        <li>Nissan</li>
+        <li>BMW</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>Copyright © 2021 Jackson's Motormall/p>
+  </footer>
+</body>
+</html>
