--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h2>Jackson Lawrence</h2>
         <nav>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter1">Chapter 1</a>
+            <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Case Project</a>
         </nav>
 
     </body>
