--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -45,15 +45,18 @@
         <li>BMW</li>
       </ul>
           <h1>Contact Us</h1>
-    <form action="submit-form.php" method="post">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name"><br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email"><br>
-      <label for="message">Message:</label>
-      <textarea id="message" name="message"></textarea><br>
-      <input type="submit" value="Submit">
-    </form>
+  <form>
+  <label>Name:</label>
+  <input type="text"><br><br>
+  
+  <label>Email:</label>
+  <input type="email"><br><br>
+  
+  <label>Message:</label>
+  <textarea></textarea><br><br>
+  
+  <input type="submit" value="Submit">
+</form>
 
     </section>
   </main>
