--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -60,7 +60,7 @@
 
     </section>
   </main>
-   <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Home</a>
+   <a href="https://github.com/JacksonL11/ClientSide23">Home</a>
   <footer>
     <p>Copyright © 2023 Jackson's Motormall/p>
   </footer>
