--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter1">Chapter 1</a>
             <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Case Project</a>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter2">Chapter 2</a>
-            <a href="https://jacksonl11.github.io/ClientSide23/>Home</a>
+            <a href="https://jacksonl11.github.io/ClientSide23/><Home</a>
         </nav>
 
     </body>
