--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -10,6 +10,7 @@
 
   <nav>
     <ul>
+      <li><a href="#shop">shop</a></li>
       <li><a href="#about">About Cars</a></li>
       <li><a href="#types">Types of Cars</a></li>
       <li><a href="#brands">Popular Car Brands</a></li>
