--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -10,7 +10,7 @@
 
   <nav>
     <ul>
-      <li><a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html/Shop">Shop</a></li>
+      <li><a href="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</a></li>
       <li><a href="#about">About Cars</a></li>
       <li><a href="#types">Types of Cars</a></li>
       <li><a href="#brands">Popular Car Brands</a></li>
