--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -10,13 +10,14 @@
  
     <main>
       <section id="featured-cars">
-        <h2>Featured Cars</h2>
-        <p>Check out our featured cars:</p>
+        <h2>HOT NEW DEALSFeatured Cars</h2>
+        <p>Check Out Our Hot New Deals ENDING SOON:</p>
         <ul>
           <li>2018 Toyota Camry</li>
           <li>2020 Honda Civic</li>
           <li>2019 Ford Mustang</li>
         </ul>
+        <script> src="javascript.js" </script>
       </section>
       <section id="all-cars">
         <h2>All Cars</h2>
