--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -10,7 +10,7 @@
  
     <main>
       <section id="featured-cars">
-        <h2>HOT NEW DEALSFeatured Cars</h2>
+        <h2>HOT NEW DEALS</h2>
         <p>Check Out Our Hot New Deals ENDING SOON:</p>
         <ul>
           <li>2018 Toyota Camry</li>
