--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Jackson's Motor Mall</title>
+    <script src="javascript.js" defer ></script>
   </head>
   <body>
     <header>
@@ -17,7 +18,7 @@
           <li>2020 Honda Civic</li>
           <li>2019 Ford Mustang</li>
         </ul>
-        <script> src="javascript.js" </script>
+        <p id="timer"></p>
       </section>
       <section id="all-cars">
         <h2>All Cars</h2>
