--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Jackson's Motor Mall</title>
+    <h2>HOT NEW DEALS<h2>
     <script src="javascript.js" defer ></script>
   </head>
   <body>
@@ -18,7 +19,7 @@
           <li>2020 Honda Civic</li>
           <li>2019 Ford Mustang</li>
         </ul>
-        <p id="timer"></p>
+     
       </section>
       <section id="all-cars">
         <h2>All Cars</h2>
