--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -3,8 +3,11 @@
   <head>
     <title>Jackson's Motor Mall</title>
     <h2>HOT NEW DEALS</h2>
-    <script>
-       var count = 60;
+   <p id="timer"></p>
+   
+
+<script>
+  var count = 60;
   var counter = setInterval(timer, 1000);
 
   function timer() {
@@ -16,7 +19,7 @@
 
     document.getElementById("timer").innerHTML = count + " secs";
   }
- </script>
+</script>
   </head>
   <body>
     <header>
