--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -6,20 +6,7 @@
    <p id="timer"></p>
    
 
-<script>
-  var count = 60;
-  var counter = setInterval(timer, 1000);
-
-  function timer() {
-    count = count - 1;
-    if (count <= 0) {
-      clearInterval(counter);
-      return;
-    }
-
-    document.getElementById("timer").innerHTML = count + " secs";
-  }
-</script>
+    <script src="javascript.js" defer></script>
   </head>
   <body>
     <header>
