--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Jackson's Motor Mall</title>
     <h2>HOT NEW DEALS</h2>
-   <p id="timer"></p>
+   <h4> id="timer"></h4>
    
 
     <script src="javascript.js" defer></script>
