--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -5,7 +5,7 @@
     
     <h2>HOT NEW DEALS</h2>
  
-    <script src="javascript.js" defer></script>
+    <script src="javascriptt.js" ></script>
   
   </head>
   <body>
