--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -5,7 +5,21 @@
     
     <h2>HOT NEW DEALS</h2>
  
-    <script src="javascriptt.js" defer></script>
+    <script>
+       var hoursLeft = 24;
+
+    function countDown() {
+      hoursLeft--;
+      console.log("Hours left in the day: " + hoursLeft);
+
+      if (hoursLeft === 0) {
+        clearInterval(timer);
+        console.log("Time's up!");
+      }
+    }
+
+    var timer = setInterval(countDown, 3600 * 1000);
+    </script>
   
   </head>
   <body>
