--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -5,21 +5,7 @@
     
     <h2>HOT NEW DEALS</h2>
  
-    <script>
-       var hoursLeft = 24;
-
-    function countDown() {
-      hoursLeft--;
-      console.log("Hours left in the day: " + hoursLeft);
-
-      if (hoursLeft === 0) {
-        clearInterval(timer);
-        console.log("Time's up!");
-      }
-    }
-
-    var timer = setInterval(countDown, 3600 * 1000);
-    </script>
+    <script src="javascript.js" defer></script>
   
   </head>
   <body>
