--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -4,23 +4,7 @@
     <section>
     <h2>HOT NEW DEALS</h2>
     </section>
-      <script>
-   
-      document.addEventListener("DOMContentLoaded", function() {
-        var hoursLeft = 24;
-
-        function countDown() {
-          hoursLeft--;
-          document.getElementById("countdown").innerHTML = "Hours left in the day: " + hoursLeft;
-
-          if (hoursLeft === 0) {
-            clearInterval(timer);
-            document.getElementById("countdown").innerHTML = "Time's up!";
-          }
-        }
-
-        var timer = setInterval(countDown, 3600 * 1000);
-      });
+      <script src="javascript.js">
     </script>
   </head>
   <body>
