--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -4,7 +4,8 @@
     <section>
     <h2>HOT NEW DEALS</h2>
     </section>
-      <script src="javascript.js">
+    <div id="countdown"></div>
+      <script src="timer.js">
     </script>
   </head>
   <body>
@@ -14,7 +15,7 @@
  
     <main>
       <section id="featured-cars">
-        <div id="countdown"></div>
+        
         <p>Check Out Our Hot New Deals ENDING SOON:</p>
         <ul>
           <li>2018 Toyota Camry</li>
