--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -4,6 +4,7 @@
     <section>
       <h2>HOT NEW DEALS</h2>
     </section>
+       <link rel="stylesheet" href="styles.css" />
     <script src="timer.js"></script>
   </head>
   <body>
