--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -2,20 +2,19 @@
   <head>
     <title>Jackson's Motor Mall</title>
     <section>
-    <h2>HOT NEW DEALS</h2>
+      <h2>HOT NEW DEALS</h2>
     </section>
-    <div id="countdown"></div>
-      <script src="timer.js">
-    </script>
+       <link rel="stylesheet" href="styles.css" />
+    <script src="timer.js"></script>
   </head>
   <body>
     <header>
       <h1>SHOP</h1>
     </header>
- 
+
     <main>
       <section id="featured-cars">
-        
+        <div id="countdown"></div>
         <p>Check Out Our Hot New Deals ENDING SOON:</p>
         <ul>
           <li>2018 Toyota Camry</li>
@@ -34,12 +33,11 @@
           <li>2022 Chevrolet Bolt</li>
         </ul>
       </section>
-   
+
     </main>
     <footer>
       <p>&copy; 2023 Car Shop</p>
     </footer>
 
-  
   </body>
 </html>
