--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -3,9 +3,10 @@
     <title>Jackson's Motor Mall</title>
     <section>
       <h2>HOT NEW DEALS</h2>
+      <div id="countdown"></div>
     </section>
        <link rel="stylesheet" href="styles.css" />
-    <script src="timer.js"></script>
+    <script src="timer.js" defer></script>
   </head>
   <body>
     <header>
@@ -14,7 +15,7 @@
 
     <main>
       <section id="featured-cars">
-        <div id="countdown"></div>
+        
         <p>Check Out Our Hot New Deals ENDING SOON:</p>
         <ul>
           <li>2018 Toyota Camry</li>
