--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -1,11 +1,7 @@
 <html>
   <head>
     <title>Jackson's Motor Mall</title>
-    <section>
-      <h2>HOT NEW DEALS</h2>
-      <div id="countdown"></div>
-    </section>
-       <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script src="timer.js" defer></script>
   </head>
   <body>
@@ -14,6 +10,13 @@
     </header>
 
     <main>
+      <section>
+        <h2>HOT NEW DEALS</h2>
+        <div id="countdown">
+          <p id="countdown-text"></p>
+        </div>
+      </section>
+
       <section id="featured-cars">
         
         <p>Check Out Our Hot New Deals ENDING SOON:</p>
