--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Jackson's Motor Mall</title>
+    <h3>SHOP TODAY EXCLUSIVE DEALS FOR A LIMITED TIME</h3>
+  <script src="javscript.js" defer></script>
 </head>
 <body>
   <header>
