--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -6,36 +6,19 @@
 <body>
   <p id="demo"></p>
 
+<button id="calculateButton">Calculate</button>
+<p id="output"></p>
+
 <script>
-<button onclick="myFunction()">Timer</button>
-  
-var countDownDate = new Date("Feb 28, 2023 15:37:25").getTime();
+  const button = document.querySelector('#calculateButton');
+  const output = document.querySelector('#output');
 
-
-var x = setInterval(function () {
-
-
-  var now = new Date().getTime();
-
-
-  var distance = countDownDate - now;
-
- 
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
-  }
-}, 1000);
+  button.addEventListener('click', () => {
+    const result = 1 + 3;
+    output.innerText = result;
+  });
 </script>
+
   <header>
     <h1>Jackson's Motor Mall</h1>
   </header>
