--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -4,17 +4,17 @@
   <title>Jackson's Motor Mall</title>
 </head>
 <body>
-  <p id="demo"></p>
 
-<button id="calculateButton">Calculate</button>
-<p id="output"></p>
+
+<button id="calculateButton">Calculate Number Of Cars</button>
+
 
 <script>
   const button = document.querySelector('#calculateButton');
   const output = document.querySelector('#output');
 
   button.addEventListener('click', () => {
-    const result = 1 + 3;
+    const result = 1 + 1 + 1 + 1 + 1;
     output.innerText = result;
   });
 </script>
