--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -15,8 +15,11 @@
 
   button.addEventListener('click', () => {
     const result = 1 + 1 + 1 + 1 + 1;
-    output.innerText = result;
-  });
+     output.innerText = result;
+    });
+  }
+
+  window.onload = calculate;
 </script>
 
   <header>
