--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -9,7 +9,7 @@
 <button id="calculateButton">Calculate Number Of Cars</button>
 
 
-<script>
+<script defer>
   const button = document.querySelector('#calculateButton');
   const output = document.querySelector('#output');
 
