--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -6,7 +6,7 @@
 <body>
 
 
-<button id="convertButton">Convert to Seconds</button>
+<button id="convertButton">30 Days Left of Deal</button>
 <p id="output"></p>
 
 <script>
@@ -19,6 +19,7 @@
     const totalSeconds = days * secondsInADay;
     output.innerText = totalSeconds + ' seconds';
   });
+  window.onload=convertButton;
 </script>
 
   <header>
