--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-
+  <h3>SHOP NOW EXCLUSIVE OFFERS FOR A LIMITED TIME</h3>
 <button id="convertButton">30 Days Left of Deal</button>
 <p id="output"></p>
 
