--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </head>
     <!-- You can place style and scripts here-->
     <body>
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nytimes.com%2F2022%2F03%2F15%2Ftechnology%2Fai-no-code.html&psig=AOvVaw0_Jz5EwLPHdZ05czvbQ8zm&ust=1675784470724000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCNj6zOKdgf0CFQAAAAAdAAAAABAE" height="1000" width="1000">
+
         <h1>Clientside Portfolio</h1>
         <h2>Jackson Lawrence</h2>
         <nav>
