--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     </head>
     <!-- You can place style and scripts here-->
     <body>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nytimes.com%2F2022%2F03%2F15%2Ftechnology%2Fai-no-code.html&psig=AOvVaw0_Jz5EwLPHdZ05czvbQ8zm&ust=1675784470724000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCNj6zOKdgf0CFQAAAAAdAAAAABAE" height="1000" width="1000">
-
+        <div class=background>
         <h1>Clientside Portfolio</h1>
         <h2>Jackson Lawrence</h2>
         <nav>
@@ -21,6 +20,7 @@
             <br>
             <a href="https://github.com/JacksonL11/ClientSide23">Home</a>
         </nav>
+        </div>
 
     </body>
     <!-- nothing should go here-->
