--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <br>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter2">Chapter 2</a>
             <br>
+             <a href="https://jacksonl11.github.io/ClientSide23/Chapter3">Chapter 3</a>
+            <br>
             <a href="https://github.com/JacksonL11/ClientSide23">Home</a>
         </nav>
         </div>
