--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <br>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter2">Chapter 2</a>
             <br>
-             <a href="https://jacksonl11.github.io/ClientSide23/Chapter3">Chapter 3</a>
+             <a href="https://jacksonl11.github.io/ClientSide23/Chapter 3">Chapter 3</a>
             <br>
             <a href="https://github.com/JacksonL11/ClientSide23">Home</a>
         </nav>
