--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -1,8 +1,6 @@
-<html>
-  <head>
-    <title>Jackson's Motor Mall</title>
+<title>Jackson's Motor Mall</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="timer.js" defer></script>
+    <script src="javascript.js" defer></script>
   </head>
   <body>
     <header>
@@ -16,7 +14,12 @@
           <p id="countdown-text"></p>
         </div>
       </section>
-
+      <div class="collage">
+        <div class="car car1"></div>
+        <div class="car car2"></div>
+        <div class="car car3"></div>
+        <div class="car car4"></div>
+      </div>
       <section id="featured-cars">
         
         <p>Check Out Our Hot New Deals ENDING SOON:</p>
