--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jackson's Motor Mall</title>
+  <title>Luxe Cars</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -26,7 +26,7 @@
 </script>
 
   <header>
-    <h1>Jackson's Motor Mall</h1>
+    <h1>Luxe Cars</h1>
   </header>
 
   <nav>
