--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -24,11 +24,11 @@
 
 
 </script>
-
+  <div class=back>
   <header>
     <h1>Luxe Cars</h1>
   </header>
-
+</div>
   <nav>
     <ul>
       <li><a href="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</a></li>
