--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -29,6 +29,12 @@
     <h1>Luxe Cars</h1>
   </header>
 </div>
+  <select id="dropdown">
+  <option value="a href='https://jacksonl11.github.io/ClientSide23/CaseProject/Shop'">Shop</option>
+  <option value="option2">Option 2</option>
+  <option value="option3">Option 3</option>
+</select>
+
   <nav>
     <ul>
       <li><a href="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</a></li>
@@ -36,67 +42,7 @@
       <li><a href="#types">Types of Cars</a></li>
       <li><a href="#brands">Popular Car Brands</a></li>
     </ul>
-  </nav>
-
-  <main>
-    <section id="about">
-      <h2>About Cars</h2>
-      <p>Cars are vehicles that are used for transportation on roads. They are powered by internal combustion engines or electric motors and are available in a wide range of models, styles, and price points.</p>
-  <head>
-    <title>Jackson's Motor Mall</title>
-    <section>
-      <h2>HOT NEW DEALS</h2>
-    </section>
-    <script src="timer.js"></script>
-  </head>
-  <body>
-    <header>
-      <h2>SHOP</h2>
-    </header>
-
-    <section id="types">
-      <h2>Types of Cars</h2>
-      <ul>
-        <li>Sedans</li>
-        <li>SUVs</li>
-        <li>Trucks</li>
-        <li>Sports Cars</li>
-        <li>Hybrids</li>
-        <li>Electric Cars</li>
-      </ul>
-    </section>
-    <main>
-      <section id="featured-cars">
-        <div id="countdown"></div>
-        <p>Check Out Our Hot New Deals ENDING SOON:</p>
-        <ul>
-          <li>2018 Toyota Camry</li>
-          <li>2020 Honda Civic</li>
-          <li>2019 Ford Mustang</li>
-        </ul>
-      </section>
-      <section id="all-cars">
-        <h2>All Cars</h2>
-        <p>Here is a list of all the cars we have:</p>
-        <ul>
-          <li>2018 Toyota Camry</li>
-          <li>2020 Honda Civic</li>
-          <li>2019 Ford Mustang</li>
-          <li>2021 Tesla Model 3</li>
-          <li>2022 Chevrolet Bolt</li>
-        </ul>
-      </section>
-
-    <section id="brands">
-      <h2>Popular Car Brands</h2>
-      <ul>
-        <li>Toyota</li>
-        <li>Ford</li>
-        <li>Chevrolet</li>
-        <li>Honda</li>
-        <li>Nissan</li>
-        <li>BMW</li>
-      </ul>
+  
           <h1>Contact Us</h1>
   <form>
   <label>Name:</label>
