--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -35,13 +35,18 @@
   <option value="option3">Option 3</option>
 </select>
 
-  <nav>
-    <ul>
-      <li><a href="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</a></li>
-      <li><a href="#about">About Cars</a></li>
-      <li><a href="#types">Types of Cars</a></li>
-      <li><a href="#brands">Popular Car Brands</a></li>
-    </ul>
+  <div class="Shop">
+      <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</a></li>
+  </div>
+  <div class="About Us">
+      <a href="#about">About Us</a>
+  </div>
+<div class="Sponsors">
+      <a href="#brands">Sponsors</a>
+</div>
+<div class="Contact Us">
+  <a href=#contact-form>Contact Us</a>
+</div>
   
           <h1>Contact Us</h1>
   <form>
