--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -1,4 +1,4 @@
-<title>Jackson's Motor Mall</title>
+<title>Shop Luxe Cars</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="javascript.js" defer></script>
   </head>
