--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -30,6 +30,26 @@
   </header>
 </div>
 
+  <div class="tabs">
+  <button class="tab-btn active" id="tab-1">Tab 1</button>
+  <button class="tab-btn" id="tab-2">Tab 2</button>
+  <button class="tab-btn" id="tab-3">Tab 3</button>
+
+  <div class="tab-content active" id="content-1">
+    <h3>Tab 1 Content</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </div>
+  <div class="tab-content" id="content-2">
+    <h3>Tab 2 Content</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  </div>
+  <div class="tab-content" id="content-3">
+    <h3>Tab 3 Content</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+  
+    </div>
+</div>
+
   <div class="Shop">
       <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</a></li>
   </div>
