--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -31,20 +31,20 @@
 </div>
 
   <div class="tabs">
-  <button class="tab-btn active" id="tab-1">Tab 1</button>
-  <button class="tab-btn" id="tab-2">Tab 2</button>
-  <button class="tab-btn" id="tab-3">Tab 3</button>
+  <button class="tab-btn active" id="shop" data-link = >Shop</button>
+  <button class="tab-btn" id="about">About Us</button>
+  <button class="tab-btn" id="Sponsors">Sponsors</button>
 
   <div class="tab-content active" id="content-1">
-    <h3>Tab 1 Content</h3>
+    <h3>SHOP</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </div>
   <div class="tab-content" id="content-2">
-    <h3>Tab 2 Content</h3>
+    <h3>ABOUT US  </h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   </div>
   <div class="tab-content" id="content-3">
-    <h3>Tab 3 Content</h3>
+    <h3>PARTNERS</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
   
     </div>
