--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -31,7 +31,7 @@
 </div>
 
   <div class="tabs">
-  <button class="tab-btn active" id="shop" data-link = >Shop</button>
+  <button class="tab-btn active" id="shop" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
   <button class="tab-btn" id="about">About Us</button>
   <button class="tab-btn" id="Sponsors">Sponsors</button>
 
