--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -32,12 +32,12 @@
 
   <div class="tabs">
   <button class="tab-btn active" id="shop" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
-  <button class="tab-btn" id="about">About Us</button>
-  <button class="tab-btn" id="Sponsors">Sponsors</button>
+  <button class="tab-btn" id="about" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/about-us">About Us</button>
+  <button class="tab-btn" id="Partners" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
 
   <div class="tab-content active" id="content-1">
     <h3>SHOP</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highes quality luxury-cars, we've got you covered.</p>
   </div>
   <div class="tab-content" id="content-2">
     <h3>ABOUT US  </h3>
@@ -49,20 +49,6 @@
   
     </div>
 </div>
-
-  <div class="Shop">
-      <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</a></li>
-  </div>
-  <div class="About Us">
-      <a href="#about">About Us</a>
-  </div>
-<div class="Sponsors">
-      <a href="#brands">Sponsors</a>
-</div>
-<div class="Contact Us">
-  <a href=#contact-form>Contact Us</a>
-</div>
-  
           <h1>Contact Us</h1>
   <form>
   <label>Name:</label>
@@ -85,7 +71,7 @@
   </main>
    <a href="https://jacksonl11.github.io/ClientSide23/">Home</a>
   <footer>
-    <p>Copyright © 2023 Jackson's Motormall/p>
+    <p>Copyright © 2023 Jackson's Motormall</p>
   </footer>
 </body>
   </body>
