--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -37,15 +37,15 @@
 
   <div class="tab-content active" id="content-1">
     <h3>SHOP</h3>
-    <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highes quality luxury-cars, we've got you covered.</p>
+    <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highes quality luxury-cars, we've got you covered. If you would like to shop, click on the shop tab.</p>
   </div>
   <div class="tab-content" id="content-2">
-    <h3>ABOUT US  </h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <h3>ABOUT US </h3>
+    <p>If you would like to know more about Luxe Cars co. , click on the About Us tab.</p>
   </div>
   <div class="tab-content" id="content-3">
     <h3>PARTNERS</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <p We are very grateful for our partners that  make this happen. If you would like to see a list of our partners, click on the Partners tab. </p>
   
     </div>
 </div>
