--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -37,7 +37,7 @@
 
   <div class="tab-content active" id="content-1">
     <h3>SHOP</h3>
-    <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highes quality luxury-cars, we've got you covered. If you would like to shop, click on the shop tab.</p>
+    <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highest quality luxury-cars, we've got you covered. To shop, click on the shop tab.</p>
   </div>
   <div class="tab-content" id="content-2">
     <h3>ABOUT US </h3>
