--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -45,7 +45,7 @@
   </div>
   <div class="tab-content active" id="partners">
     <h3>PARTNERS</h3>
-    <p We are very grateful for our partners that  make this happen. If you would like to see a list of our partners, click on the Partners tab. </p>
+    <p> We are very grateful for our partners that  make this happen. If you would like to see a list of our partners, click on the Partners tab. </p>
   
     </div>
 </div>
