--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -34,7 +34,7 @@
   <button class="tab-btn active" id="shop" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
   <button class="tab-btn" id="about" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/about-us">About Us</button>
   <button class="tab-btn" id="Partners" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
-<div>
+<div id="bio">
   <div class="tab-content active" id="shop">
     <h3>SHOP</h3>
     <p>At Luxe Cars, you'll find a massive selection of the latest and greatest luxury cars from the most trusted brands in the industry. If you're in the market for the highest quality luxury-cars, we've got you covered. To shop, click on the shop tab.</p>
