--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -1,50 +1,22 @@
-<title>Shop Luxe Cars</title>
-    <link rel="stylesheet" href="styles.css" />
-    <script src="javascript.js" defer></script>
-  </head>
-  <body>
-    <header>
-      <h1>SHOP</h1>
-    </header>
-
-    <main>
-      <section>
-        <h2>HOT NEW DEALS</h2>
-        <div id="countdown">
-          <p id="countdown-text"></p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id="wrapper">
+       <div id="container">
+           <h1>Shopping list</h1>
+           <div id="items"></div>
+       </div>
+        <div id="container">
+            <h1>Cart</h1>
+            <div id="cart"></div>
         </div>
-      </section>
-      <div class="collage">
-        <div class="car car1"></div>
-        <div class="car car2"></div>
-        <div class="car car3"></div>
-        <div class="car car4"></div>
-      </div>
-      <section id="featured-cars">
-        
-        <p>Check Out Our Hot New Deals ENDING SOON:</p>
-        <ul>
-          <li>2018 Toyota Camry</li>
-          <li>2020 Honda Civic</li>
-          <li>2019 Ford Mustang</li>
-        </ul>
-      </section>
-      <section id="all-cars">
-        <h2>All Cars</h2>
-        <p>Here is a list of all the cars we have:</p>
-        <ul>
-          <li>2018 Toyota Camry</li>
-          <li>2020 Honda Civic</li>
-          <li>2019 Ford Mustang</li>
-          <li>2021 Tesla Model 3</li>
-          <li>2022 Chevrolet Bolt</li>
-        </ul>
-      </section>
-
-    </main>
-    <footer>
-      <p>&copy; 2023 Car Shop</p>
-    </footer>
-
-  </body>
+    </div>
+    <script src="./script.js"></script>
+</body>
 </html>
