--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -17,6 +17,6 @@
             <div id="cart"></div>
         </div>
     </div>
-    <script src="./script.js"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
