--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -71,7 +71,7 @@
   </main>
    <a href="https://jacksonl11.github.io/ClientSide23/">Home</a>
   <footer>
-    <p>Copyright © 2023 Jackson's Motormall</p>
+    <p>Copyright © 2023 Luxe Cars Co.</p>
   </footer>
 </body>
   </body>
