--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -1,22 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div id="wrapper">
-       <div id="container">
-           <h1>Shopping list</h1>
-           <div id="items"></div>
-       </div>
-        <div id="container">
-            <h1>Cart</h1>
-            <div id="cart"></div>
+<!-- wrapper -->
+<div class="wrapper">
+     <h1>Bike Stock</h1>
+ <span><i class="shopping-cart"></i></span>
+
+    <div class="clear"></div>
+    <!-- items -->
+    <div class="items">
+        <!-- single item -->
+        <div class="item">
+            <script src="javascript.js></script>
+            <img src="rolls.jpg"/>
+            <script src="javascript.js"></script>
+             <h2>Item 1</h2>
+
+            <p>Price: <em>$449</em>
+            </p>
+            <button class="add-to-cart" type="button">Add to cart</button>
         </div>
+        <!--/ single item -->
+        <!-- single item -->
+        <div class="item">
+            <img src="http://img.tjskl.org.cn/pic/z2577d9d-200x200-1/pinarello_lungavita_2010_single_speed_bike.jpg" alt="item" />
+             <h2>Item 1</h2>
+
+            <p>Price: <em>$449</em>
+            </p>
+            <button class="add-to-cart" type="button">Add to cart</button>
+        </div>
+        <!--/ single item -->
+        <!-- single item -->
+        <div class="item">
+            <img src="http://img1.exportersindia.com/product_images/bc-small/dir_55/1620613/cannondale-jekyll-1-2011-mountain-bike-309779.jpg" alt="item" />
+             <h2>Item 1</h2>
+
+            <p>Price: <em>$449</em>
+            </p>
+            <button class="add-to-cart" type="button">Add to cart</button>
+        </div>
+        <!--/ single item -->
     </div>
-    <script src="javascript.js"></script>
-</body>
-</html>
+    <!--/ items -->
+</div>
+<!--/ wrapper -->
