--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -8,7 +8,8 @@
     <div class="items">
         <!-- single item -->
         <div class="item">
-            <script src="javascript.js></script>
+            <script src="javascript.js defer> </script>
+           <link rel="stylesheet" href="styles.css" />
             <img src="rolls.jpg"/>
             <script src="javascript.js"></script>
              <h2>Item 1</h2>
