--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -8,13 +8,12 @@
     <div class="items">
         <!-- single item -->
         <div class="item">
-            <script src="javascript.js defer> </script>
+            <script src="javascript.js" defer> </script>
            <link rel="stylesheet" href="styles.css" />
-            <img src="rolls.jpg"/>
-            <script src="javascript.js"></script>
-             <h2>Item 1</h2>
+            <img src= "rolls.jpg" />
+             <h2>Rolls Royce-Phantom</h2>
 
-            <p>Price: <em>$449</em>
+            <p>Price: <em>$350,000</em>
             </p>
             <button class="add-to-cart" type="button">Add to cart</button>
         </div>
