--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -10,7 +10,7 @@
         <div class="item">
             <script src="javascript.js" defer> </script>
            <link rel="stylesheet" href="styles.css" />
-            <img src= "rolls.jpg" />
+            <img src= "rolls.jpg" height="50" length="100"/>
              <h2>Rolls Royce-Phantom</h2>
 
             <p>Price: <em>$350,000</em>
