--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -1,6 +1,6 @@
 <!-- wrapper -->
 <div class="wrapper">
-     <h1>Bike Stock</h1>
+     <h1>Car Stock</h1>
  <span><i class="shopping-cart"></i></span>
 
     <div class="clear"></div>
@@ -10,7 +10,7 @@
         <div class="item">
             <script src="javascript.js" defer> </script>
            <link rel="stylesheet" href="styles.css" />
-            <img src= "rolls.jpg" height="50" length="100"/>
+            <img src= "rolls.jpg" height="200" length="250"/>
              <h2>Rolls Royce-Phantom</h2>
 
             <p>Price: <em>$350,000</em>
@@ -20,10 +20,10 @@
         <!--/ single item -->
         <!-- single item -->
         <div class="item">
-            <img src="http://img.tjskl.org.cn/pic/z2577d9d-200x200-1/pinarello_lungavita_2010_single_speed_bike.jpg" alt="item" />
-             <h2>Item 1</h2>
+            <img src="bentley.jpg" alt="item" height="200" length="250" />
+             <h2>Bentley Continenetal GT</h2>
 
-            <p>Price: <em>$449</em>
+            <p>Price: <em>$200,000</em>
             </p>
             <button class="add-to-cart" type="button">Add to cart</button>
         </div>
