--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -10,7 +10,7 @@
         <div class="item">
             <script src="javascript.js" defer> </script>
            <link rel="stylesheet" href="styles.css" />
-            <img src= "rolls.jpg" height="200" length="250"/>
+            <img src= "rolls.jpg" height="150" length="200"/>
              <h2>Rolls Royce-Phantom</h2>
 
             <p>Price: <em>$350,000</em>
@@ -20,7 +20,7 @@
         <!--/ single item -->
         <!-- single item -->
         <div class="item">
-            <img src="bentley.jpg" alt="item" height="200" length="250" />
+            <img src="bentley.jpg" alt="item" height="150" length="200" />
              <h2>Bentley Continenetal GT</h2>
 
             <p>Price: <em>$200,000</em>
@@ -30,10 +30,10 @@
         <!--/ single item -->
         <!-- single item -->
         <div class="item">
-            <img src="http://img1.exportersindia.com/product_images/bc-small/dir_55/1620613/cannondale-jekyll-1-2011-mountain-bike-309779.jpg" alt="item" />
-             <h2>Item 1</h2>
+            <img src="aven.jpg" alt="item" height="150" length="200" />
+             <h2>Lamborghini Aventador</h2>
 
-            <p>Price: <em>$449</em>
+            <p>Price: <em>$400,000</em>
             </p>
             <button class="add-to-cart" type="button">Add to cart</button>
         </div>
