--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -27,6 +27,14 @@
             </p>
             <button class="add-to-cart" type="button">Add to cart</button>
         </div>
+          <div class="item">
+            <img src="bentley.jpg" alt="item" height="150" length="200" />
+             <h2>Bentley Continenetal GT</h2>
+
+            <p>Price: <em>$200,000</em>
+            </p>
+            <button class="add-to-cart" type="button">Add to cart</button>
+        </div>
         <!--/ single item -->
         <!-- single item -->
         <div class="item">
