--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -44,7 +44,7 @@
             <button class="add-to-cart" type="button">Add to cart</button>
         </div>
          <div class="item">
-            <img src="benx.jpg" alt="item" height="150" length="200" />
+            <img src="benz.jpg" alt="item" height="150" length="200" />
              <h2>Mercedez-Benz S-Class</h2>
 
             <p>Price: <em>$100,000</em>
