--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         <nav>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter1">Chapter 1</a>
             <br>
-            <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Case Project</a>
-            <br>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter2">Chapter 2</a>
             <br>
              <a href="https://jacksonl11.github.io/ClientSide23/Chapter 3">Chapter 3</a>
             <br>
+            <a href="https://jacksonl11.github.io/ClientSide23/Chapter 4"><Chapter 4</a>
+            <br>
+            <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Case Project</a>
+            <br>
+           
             <a href="https://github.com/JacksonL11/ClientSide23">Home</a>
         </nav>
         </div>
