--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             <br>
              <a href="https://jacksonl11.github.io/ClientSide23/Chapter 3">Chapter 3</a>
             <br>
-            <a href="https://jacksonl11.github.io/ClientSide23/Chapter 4"><Chapter 4</a>
+            <a href="https://jacksonl11.github.io/ClientSide23/Chapter 4">Chapter 4</a>
             <br>
             <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Case Project</a>
             <br>
-           
             <a href="https://github.com/JacksonL11/ClientSide23">Home</a>
         </nav>
         </div>
