--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -63,6 +63,7 @@
   <input type="submit" value="Submit">
 </form>
     </main>
+  <h4>The try-catch block in the code is used to validate an email address. The try block contains the code that might cause an error, which is the input.value.match(validRegex) statement. If this statement throws an error, it is caught by the catch block, which then displays an alert message saying "Invalid email address!".</h4>
     <footer>
       <p>&copy; 2023 Car Shop</p>
     </footer>
