--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -102,3 +102,4 @@
     <!--/ items -->
 </div>
 <!--/ wrapper -->
+     <h6> Console.log code is used to print messages to the console, all javascript code has been validated by console.log. If console.log detected errors I used breakpoint code to debug these errors. </h6>
