--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -8,7 +8,7 @@
 
   <h3>SHOP NOW EXCLUSIVE OFFERS FOR A LIMITED TIME</h3>
 <button id="convertButton">30 Days Left of Deal</button>
-<p id="output"></p>
+<p> id="output"></p>
   <script src="javascript.js" defer></script>
 <script>
  const button = document.querySelector('#convertButton');
