--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -19,6 +19,7 @@
     <button class="tab-btn active" id="shop" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
     <button class="tab-btn" id="about" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/about-us">About Us</button>
     <button class="tab-btn" id="partners" data-link="https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
+  </div>
 
     <section id="bio">
       <div class="tab-content active" id="shop-content">
@@ -49,7 +50,7 @@
 
     <input type="submit" value="Submit">
   </form>
-  <h1>The try-catch block in the code is used to validate an email address. The try block contains the code that might cause an error, which is the input.value.match(validRegex) statement. If this statement throws an error, it is caught by the catch block, which then displays an alert message saying "Invalid email address!".</h1>
+  <p>The try-catch block in the code is used to validate an email address. The try block contains the code that might cause an error, which is the input.value.match(validRegex) statement. If this statement throws an error, it is caught by the catch block, which then displays an alert message saying "Invalid email address!".</p>
 
   <footer>
     <p>&copy; 2023 Car Shop</p>
