--- a/CaseProject/Shop/index.html
+++ b/CaseProject/Shop/index.html
@@ -102,4 +102,4 @@
     <!--/ items -->
 </div>
 <!--/ wrapper -->
-     <h6> Console.log code is used to print messages to the console, all javascript code has been validated by console.log. If console.log detected errors I used breakpoint code to debug these errors. </h6>
+     <h6> Console.log code is used to print messages to the console, breakpoint is used to pause debugger execution. All javascript code has been validated by console.log and breakpoints </h6>
