--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -57,7 +57,7 @@
 </form>
     </main>
     <footer>
-      <p>&copy; 2023 Car Shop **A try catch(err) code is used to detect if there is correct syntax when inputting an email address. If the email address is not valid, and error will pop up.**</p>
+      <p>&copy; 2023 Car Shop **A try catch(err) code is used to detect if there is correct syntax when inputting an email address. If the email address is not valid, an error will pop up.**</p>
     </footer>
     </section>
   </main>
