--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <br>
             <a href="https://jacksonl11.github.io/ClientSide23/Chapter 4">Chapter 4</a>
             <br>
+              <a href="https://jacksonl11.github.io/ClientSide23/Chapter 5">Chapter 5</a>
+            <br>
             <a href="https://jacksonl11.github.io/ClientSide23/CaseProject/index.html">Case Project</a>
             <br>
             <a href="https://github.com/JacksonL11/ClientSide23">Home</a>
