--- a/CaseProject/Web Security/index.html
+++ b/CaseProject/Web Security/index.html
@@ -1,1 +1,13 @@
+<html>
+  <header>
+  Web security is a critical issue, and visitors should be educated about it. There are several ways to improve web security, such as:
 
+Using HTTPS: HTTPS encrypts data that is transferred between a web server and a user's browser, which makes it more difficult for hackers to intercept the data.
+
+Keeping software updated: Software updates often include security patches that fix vulnerabilities that could be exploited by attackers.
+
+Using strong passwords: Weak passwords are easy to guess, so it's important to use strong passwords that are difficult to crack.
+
+Avoiding suspicious websites: Some websites can contain malware or other types of malicious code that can infect a user's computer or steal their data.
+    <header>
+</html>
