--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -30,7 +30,7 @@
   <button class="tab-btn active" id="shop" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Shop">Shop</button>
   <button class="tab-btn" id="about" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/about-us">About Us</button>
   <button class="tab-btn" id="Partners" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Partners">Partners</button>
-     <button class="tab-btn" id="Partners" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Web Security">Partners</button>
+     <button class="tab-btn" id="Partners" data-link = "https://jacksonl11.github.io/ClientSide23/CaseProject/Web Security">Web Security</button>
 <section id="bio">
   <div class="tab-content active" id="shop">
     <h3>SHOP</h3>
