--- a/CaseProject/Web Security/index.html
+++ b/CaseProject/Web Security/index.html
@@ -1,7 +1,7 @@
 <html>
   <header>
     <script src="javascript.js" defer></script>
-    
+    <link rel="stylesheet" href="styles.css" />
     <header>
       <body>
         <h1>
