--- a/CaseProject/Web Security/index.html
+++ b/CaseProject/Web Security/index.html
@@ -5,15 +5,21 @@
     <header>
       <body>
         <h1>
-         Web security is a critical issue, and visitors should be educated about it. There are several ways to improve web security, such as:
-
-Using HTTPS: HTTPS encrypts data that is transferred between a web server and a user's browser, which makes it more difficult for hackers to intercept the data.
-
-Keeping software updated: Software updates often include security patches that fix vulnerabilities that could be exploited by attackers.
-
-Using strong passwords: Weak passwords are easy to guess, so it's important to use strong passwords that are difficult to crack.
-
-Avoiding suspicious websites: Some websites can contain malware or other types of malicious code that can infect a user's computer or steal their data.
+         Web security is a critical issue, and visitors should be educated about it.
         </h1>
+        <p>
+          There are several ways to improve web security, such as:
+<br>
+Using HTTPS: HTTPS encrypts data that is transferred between a web server and a user's browser, which makes it more difficult for hackers to intercept the data.
+<br>
+Keeping software updated: Software updates often include security patches that fix vulnerabilities that could be exploited by attackers.
+<br>
+Using strong passwords: Weak passwords are easy to guess, so it's important to use strong passwords that are difficult to crack.
+<br>
+Avoiding suspicious websites: Some websites can contain malware or other types of malicious code that can infect a user's computer or steal their data.
+          <p>
+        <h4>
+          You just experienced six annoying pop ups clickin on this website. You know whats even more Annoying? Websites accesing your personal information. Those pop-ups are just the basics of what information website's can obtain, but here ate Luxe Car's, we value our customer's privacy. Follow the steps above to ensure your internet safety.
+        </h4>
       </body>
 </html>
