--- a/CaseProject/Web Security/index.html
+++ b/CaseProject/Web Security/index.html
@@ -19,7 +19,7 @@ Using strong passwords: Weak passwords are easy to guess, so it's important to u
 Avoiding suspicious websites: Some websites can contain malware or other types of malicious code that can infect a user's computer or steal their data.
           <p>
         <h4>
-          You just experienced six annoying pop ups clickin on this website. You know whats even more Annoying? Websites accesing your personal information. Those pop-ups are just the basics of what information website's can obtain, but here ate Luxe Car's, we value our customer's privacy. Follow the steps above to ensure your internet safety.
+          You just experienced six annoying pop ups clicking on this website. You know whats even more Annoying? Websites accesing your personal information. Those pop-ups are just the basics of what information website's can obtain, but here at Luxe Car's, we value our customer's privacy. Follow the steps above to ensure your internet safety.
         </h4>
       </body>
 </html>
