--- a/CaseProject/index.html
+++ b/CaseProject/index.html
@@ -14,7 +14,7 @@
     <form id="verification-form">
       <label for="age">Age:</label>
       <label for="age-checkbox">Please Select Your Age Group</label>
-      <input type="checkbox" id="checkboxes" name="age-checkbox" required>
+      <input type="checkbox" id="age-range" name="age-checkbox" required>
 
       <label for="firstName">First Name:</label>
       <input type="text" id="firstName" name="firstName" pattern="[A-Za-z]+" required>
